--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
+    "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
@@ -30,22 +32,26 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
+    "bootstrap-loader": "git@github.com:shakacode/bootstrap-loader.git#2.0.0-beta.22",
     "browser-sync": "^2.18.6",
     "chai": "^4.0.0-canary.1",
+    "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.2",
     "ejs": "^2.5.5",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.1",
     "highlight.js": "^9.9.0",
     "json-loader": "^0.5.4",
     "markdown-it": "^8.2.2",
     "mocha": "^3.2.0",
+    "node-sass": "^4.5.0",
     "path-to-regexp": "^1.7.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
@@ -63,12 +69,14 @@
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
     "s3": "^4.4.0",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0"
