--- a/src/main/react/.bootstraprc
+++ b/src/main/react/.bootstraprc
@@ -31,14 +31,14 @@ extractStyles: false
 # Thus, derived Bootstrap variables can depend on values from here.
 # See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
-# preBootstrapCustomizations: ./path/to/bootstrap/pre-customizations.scss
+preBootstrapCustomizations: ./src/bootstrap.scss
 
 
 # This gets loaded after bootstrap/variables is loaded
 # Thus, you may customize Bootstrap variables
 # based on the values established in the Bootstrap _variables.scss file
 #
-bootstrapCustomizations: ./src/bootstrap.scss
+# bootstrapCustomizations: ./src/bootstrap.scss
 
 
 # Import your custom styles here
