--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "bootstrap-loader": "^2.0.0-beta.22",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
@@ -17,6 +18,7 @@
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.2"
   },
@@ -32,7 +34,6 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
-    "bootstrap-loader": "git@github.com:shakacode/bootstrap-loader.git#2.0.0-beta.22",
     "browser-sync": "^2.18.6",
     "chai": "^4.0.0-canary.1",
     "compression-webpack-plugin": "^0.3.2",
