--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
-    "bootstrap-loader": "^2.0.0-beta.22",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
@@ -16,7 +15,6 @@
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-mdl": "^1.9.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
@@ -34,6 +32,7 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
+    "bootstrap-loader": "git@github.com:shakacode/bootstrap-loader.git#2.0.0-beta.22",
     "browser-sync": "^2.18.6",
     "chai": "^4.0.0-canary.1",
     "compression-webpack-plugin": "^0.3.2",
@@ -49,6 +48,7 @@
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.1",
     "highlight.js": "^9.9.0",
+    "http-proxy-middleware": "^0.17.4",
     "json-loader": "^0.5.4",
     "markdown-it": "^8.2.2",
     "mocha": "^3.2.0",
