--- a/src/main/react/.bootstraprc
+++ b/src/main/react/.bootstraprc
@@ -89,7 +89,7 @@ styles:
   close: true
 
   # Components w/ JavaScript
-  modals: false
+  modals: true
   tooltip: true
   popovers: false
   carousel: false
@@ -106,7 +106,7 @@ scripts:
   carousel: false
   collapse: false
   dropdown: true
-  modal: false
+  modal: true
   tooltip: true
   popover: false
   scrollspy: false
