--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-waypoint": "^5.1.0",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.2"
   },
