--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
+    "dateformat": "^2.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
     "jquery": "^3.1.1",
