Add bootstrap configuration; Add test suite chart

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
+# Sets the project name to be visible on frontend
+project.name=Test Report App
+
+# Show stats for this suites on dashboard
+suite.statistics=on_commit: full regression,on_commit: full regression api 2
+
+
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
 
