--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "babel-polyfill": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
+    "chart.js": "^2.5.0",
     "classnames": "^2.2.5",
     "dateformat": "^2.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
+    "react-chartjs-2": "^2.0.5",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
