--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,8 @@
 # Sets the project name to be visible on frontend
 project.name=Test Report App
 
-# Show stats for this suites on dashboard
-suite.statistics=on_commit: full regression,on_commit: full regression api 2
-
+# Comma separated list of suite names that will be shown on dashboard
+suite.statistics=
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
