Add suport for github branch/hash on dashboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,17 @@ project.name=Test Report App
 # Comma separated list of suite names that will be shown on dashboard
 suite.statistics=
 
-# Logging Properties
-logging.level.org.hibernate.SQL=debug
+# Feature toogles
+# Show git information on dashboard
+project.features.git.info=false
+
+# Github repo link
+git.github.repo=
 
 # Database Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/test-reporter
 spring.datasource.username=testreporter
 spring.datasource.password=testreporter
+
+# Logging Properties
+logging.level.org.hibernate.SQL=debug
