Finish up with navigation improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@
 # Sets the project name to be visible on frontend
 project.name=Test Report App
 
-# Comma separated list of suite names that will be shown on dashboard
+# Custom server port
+server.port=8090
+
+# Comma separated list of testSuite names that will be shown on dashboard
 suite.statistics=
 
 # Feature toogles
