--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-select": "^1.0.0-rc.5",
     "react-waypoint": "^5.1.0",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.2"
@@ -41,7 +42,7 @@
     "chai": "^4.0.0-canary.1",
     "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.26.4",
     "ejs": "^2.5.5",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
