Add support for git filtering; Minor improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ suite.statistics=
 
 # Feature toogles
 # Show git information on dashboard
-project.features.git.info=false
+project.features.git.info=true
 
 # Github repo link
-git.github.repo=
+git.github.repo=http://github.com/org/repo
 
 # Database Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/test-reporter
