Fix issue with bug in package phase

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
             <goals>
               <goal>yarn</goal>
             </goals>
-            <phase>package</phase>
+            <phase>generate-resources</phase>
             <configuration>
               <arguments>build</arguments>
             </configuration>
