--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
+        <version>1.3</version>
         <configuration>
           <nodeVersion>v6.0.0</nodeVersion>
           <yarnVersion>v0.24.6</yarnVersion>
@@ -98,8 +99,20 @@
             <goals>
               <goal>install-node-and-yarn</goal>
             </goals>
-            <phase>generate-resources</phase>
+            <phase>initialize</phase>
           </execution>
+
+          <execution>
+            <id>clean yarn caches</id>
+            <goals>
+              <goal>yarn</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <arguments>cache clean</arguments>
+            </configuration>
+          </execution>
+
           <execution>
             <id>yarn install</id>
             <goals>
@@ -118,6 +131,24 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>src/main/react/node</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/react/node_modules</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/react/public/dist</directory>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
 
       <plugin>
