--- a/src/main/react/.bootstraprc
+++ b/src/main/react/.bootstraprc
@@ -31,7 +31,7 @@ extractStyles: false
 # Thus, derived Bootstrap variables can depend on values from here.
 # See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
-preBootstrapCustomizations: ./src/bootstrap.scss
+preBootstrapCustomizations: ./src/styles/bootstrap.scss
 
 
 # This gets loaded after bootstrap/variables is loaded
@@ -44,7 +44,7 @@ preBootstrapCustomizations: ./src/bootstrap.scss
 # Import your custom styles here
 # Usually this endpoint-file contains list of @imports of your application styles
 #
-appStyles: ./src/app.scss
+appStyles: ./src/styles/app.scss
 
 ### Bootstrap styles
 styles:
