--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,12 @@ server.port=8090
 # Comma separated list of testSuite names that will be shown on dashboard
 suite.statistics=
 
-# Feature toogles
+# Feature toggles
 # Show git information on dashboard
 project.features.git.info=true
+
+# Show bug tracking feature
+project.features.bug.tracking=true
 
 # Github repo link
 git.github.repo=http://github.com/org/repo
