--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <groupId>com.atlantbh</groupId>
   <artifactId>test-reporter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>test-reporter</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/ATLANTBH/test-reporter</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,6 +20,13 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.5.1.RELEASE</version>
   </parent>
+
+  <scm>
+    <url>https://github.com/ATLANTBH/test-reporter</url>
+    <connection>scm:git:git://github.com/ATLANTBH/test-reporter.git</connection>
+    <developerConnection>scm:git:git@github.com:ATLANTBH/test-reporter.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
     <dependency>
@@ -204,6 +211,15 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+        </configuration>
       </plugin>
     </plugins>
   </build>
