--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.atlantbh</groupId>
   <artifactId>test-reporter</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>test-reporter</name>
@@ -24,7 +24,7 @@
     <url>https://github.com/ATLANTBH/test-reporter</url>
     <connection>scm:git:git://github.com/ATLANTBH/test-reporter.git</connection>
     <developerConnection>scm:git:git@github.com:ATLANTBH/test-reporter.git</developerConnection>
-    <tag>v1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
