--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.atlantbh</groupId>
-  <artifactId>test-reporter</artifactId>
+  <artifactId>owl</artifactId>
   <version>1.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>test-reporter</name>
-  <url>https://github.com/ATLANTBH/test-reporter</url>
+  <name>owl</name>
+  <url>https://github.com/ATLANTBH/owl</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,9 +21,9 @@
   </parent>
 
   <scm>
-    <url>https://github.com/ATLANTBH/test-reporter</url>
-    <connection>scm:git:git://github.com/ATLANTBH/test-reporter.git</connection>
-    <developerConnection>scm:git:git@github.com:ATLANTBH/test-reporter.git</developerConnection>
+    <url>https://github.com/ATLANTBH/owl</url>
+    <connection>scm:git:git://github.com/ATLANTBH/owl.git</connection>
+    <developerConnection>scm:git:git@github.com:ATLANTBH/owl.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
