Updating default project name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # Sets the project name to be visible on frontend
-project.name=Test Report App
+project.name=Project Name
 
 # Custom server port
 server.port=8090
