--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -14,6 +14,7 @@
     "dateformat": "^2.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.5",
@@ -53,6 +54,7 @@
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.1",
     "highlight.js": "^9.9.0",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "json-loader": "^0.5.4",
     "markdown-it": "^8.2.2",
