Update db naming in README and app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ project.features.bug.tracking=true
 git.github.repo=http://github.com/org/repo
 
 # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/test-reporter
-spring.datasource.username=testreporter
-spring.datasource.password=testreporter
+spring.datasource.url=jdbc:postgresql://localhost:5432/owl-db
+spring.datasource.username=owlusername
+spring.datasource.password=owlpassword
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
