Remove application.properties from README and add missing fields to default file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ project.name=Project Name
 server.port=8090
 
 # Comma separated list of testSuite names that will be shown on dashboard
-suite.statistics=
+suite.statistics=smoke test,regression test
 
 # Feature toggles
 # Show git information on dashboard
@@ -25,3 +25,12 @@ spring.datasource.password=owlpassword
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
+
+
+# Set port - 0 means the default port will be used
+server.port=0
+
+# Properties for flyway baseline migrations
+flyway.url=jdbc:postgresql://localhost:5432/owl-db
+flyway.user=owlusername
+flyway.password=owlpassword
