Add commented flyway configuration fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.datasource.password=owlpassword
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
+
+# Properties for flyway baseline migrations
+#flyway.url=jdbc:postgresql://localhost:5432/owl-db
+#flyway.user=owlusername
+#flyway.password=owlpassword
