--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.atlantbh</groupId>
   <artifactId>owl</artifactId>
-  <version>1.1.1</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>owl</name>
@@ -25,7 +25,7 @@
     <url>https://github.com/ATLANTBH/owl</url>
     <connection>scm:git:git://github.com/ATLANTBH/owl.git</connection>
     <developerConnection>scm:git:git@github.com:ATLANTBH/owl.git</developerConnection>
-    <tag>v1.1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
