fix formatting and enable featuretoggle for screenshot button

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ suite.statistics=smoke test,regression test
 # Feature toggles
 # Show git information on dashboard
 project.features.git.info=true
+# Show failed test steps screenshots
+project.features.screenshot.url=false
 
 # Show bug tracking feature
 project.features.bug.tracking=true
