--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -87,6 +87,7 @@
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
     "ttf-loader": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.0",
     "webpack-dev-middleware": "^3.7.0",
