--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ git.github.repo=http://github.com/org/repo
 
 # Database Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/owl-db
-spring.datasource.username=owlusername
-spring.datasource.password=owlpassword
+spring.datasource.user=postgres
+spring.datasource.password=postgres
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
@@ -32,3 +32,7 @@ logging.level.org.hibernate.SQL=debug
 #flyway.url=jdbc:postgresql://localhost:5432/owl-db
 #flyway.user=owlusername
 #flyway.password=owlpassword
+
+# Jwt authentication
+jwtSecret=owljwt
+jwtExpiration=43200000
