--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 project.name=Project Name
 
 # Custom server port
-server.port=8090
+server.port=8095
 
 # Comma separated list of testSuite names that will be shown on dashboard
 suite.statistics=smoke test,regression test
@@ -21,8 +21,8 @@ project.features.bug.tracking=true
 git.github.repo=http://github.com/org/repo
 
 # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/owl-db
-spring.datasource.user=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/owl-pgtest
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # Logging Properties
@@ -32,6 +32,7 @@ logging.level.org.hibernate.SQL=debug
 #flyway.url=jdbc:postgresql://localhost:5432/owl-db
 #flyway.user=owlusername
 #flyway.password=owlpassword
+
 
 # Jwt authentication
 jwtSecret=owljwt
