--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
+#     - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=testreporter
+#     - POSTGRES_DB=test-reporter
