--- a/docker/application.properties
+++ b/docker/application.properties
@@ -25,3 +25,7 @@ spring.datasource.password=testreporter
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
+
+# Jwt authentication
+jwtSecret=owljwt
+jwtExpiration=43200000
