Minor UI changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,5 @@ logging.level.org.hibernate.SQL=debug
 
 
 # Jwt authentication
-jwtSecret=owljwt
-jwtExpiration=43200000
+jwt.secret=owljwt
+jwt.expiration=43200000
