Fixed according to git comment

--- a/docker/application.properties
+++ b/docker/application.properties
@@ -21,7 +21,7 @@ git.github.repo=http://github.com/org/repo
 # Database Properties
 spring.datasource.url=jdbc:postgresql://postgres:5432/test-reporter
 spring.datasource.username=postgres
-spring.datasource.password=testreporter
+#spring.datasource.password=testreporter
 
 # Logging Properties
 logging.level.org.hibernate.SQL=debug
